spacing issue

--- a/css/form.css
+++ b/css/form.css
@@ -117,6 +117,6 @@
   }
 
   .form-wrapper {
-    min-height: 190px !important;
+    min-height: 0 !important;
   }
 }
