--- a/css/main.css
+++ b/css/main.css
@@ -563,10 +563,12 @@ img {
 
   .section-form { margin-top: 21px; }
 
+  .site-main { padding-bottom: 8px; }
+
   .section-mascot {
     margin-top: 34px;
     margin-bottom: 21px;
   }
 
-  .site-footer { margin-top: 55px; }
+  .site-footer { margin-top: 21px; }
 }
